# accounts/views.py
@@ -12,7 +12,7 @@ from rest_framework import status
 from blog.models import Post
 
 from . import serializers
-from .models import SubscribesList, Subscribe
+from blog.models import SubscribesList, Subscribe
 from blog.serializers import PostSerializer
 
 
@@ -84,81 +84,11 @@ class UserOperateView(generics.GenericAPIView, mixins.RetrieveModelMixin):
         return self.retrieve(request, *args, **kwargs)
 
 
-class UserPostsView(generics.GenericAPIView, mixins.RetrieveModelMixin):
-    serializer_class = serializers.UserSerializer
-    permission_classes = [AllowAny]
-
-    def get_queryset(self):
-        return get_user_model().objects.all()
-
-    def get(self, request, *args, **kwargs):
-        from_user = self.get_object()
-        qs = Post.objects.filter(owner=from_user)
-        serializer = PostSerializer(qs, many=True)
-        return Response(serializer.data, status=status.HTTP_200_OK)
-
-
-class SubscribeCreateOrListView(mixins.ListModelMixin,
-                  mixins.CreateModelMixin,
-                  generics.GenericAPIView):
-    serializer_class = serializers.SubscribeSerializer
-    permission_classes = [IsAuthenticated]
-
-    def get_queryset(self):
-        return Subscribe.objects.filter(subscribeslist__owner = self.request.user)
-
-    def get(self, request, *args, **kwargs):
-        return self.list(request, *args, **kwargs)
-    
-    def post(self, request, *args, **kwargs):
-        serializer = self.serializer_class(data=request.data)
-        if serializer.is_valid():
-            request_user_subs_list = request.user.get_subs_list()
-            subscribed = False
-            try:
-                if request_user_subs_list.subscribed_to.all().get(to=request.POST.get('to')):
-                    subscribed = True
-                    return Response({'detail' : 'You already subscribe to this user'}, status=status.HTTP_201_CREATED)
-            except:
-                if not subscribed:
-                    subscribe = serializer.save()
-                    request_user_subs_list.subscribed_to.add(subscribe)
-                    request_user_subs_list.save()
-                    return Response(serializer.data, status=status.HTTP_201_CREATED)
-        return Response(serializer.errors, status=status.HTTP_400_BAD_REQUEST)
-
-
-
-class SubscribeOperateView(generics.GenericAPIView, mixins.DestroyModelMixin):
-    serializer_class = serializers.SubscribeSerializer
-    permission_classes = [IsAuthenticated]
-
-    def get_queryset(self):
-        return Subscribe.objects.filter(subscribeslist__owner = self.request.user)
-
-    def delete(self, request, *args, **kwargs):
-        return self.destroy(request, *args, **kwargs)
 
 
 
 
-class FeedView(generics.GenericAPIView, mixins.ListModelMixin):
-    serializer_class = serializers.UserSerializer
-    permission_classes = [IsAuthenticated]
 
-    def get_queryset(self, *args, **kwargs):
-        return Post.objects.all()
 
-    def get(self, request, *args, **kwargs):
-        request_user_subs_list = request.user.get_subs_list()
-        qs = Post.objects.none()
 
-        for subs in request_user_subs_list.subscribed_to.all():
-            to_user = subs.to
-            created = subs.subscribed_time
-            subs_posts = to_user.get_posts_from_date(created)
-            qs = list(chain(qs, subs_posts))
-        print(qs)
-        serializer = PostSerializer(qs, many=True)
-        return Response(serializer.data, status=status.HTTP_200_OK)
             
