# core/urls.py
@@ -28,9 +28,13 @@ urlpatterns = [
     ), name='openapi-schema'),
     path('admin/', admin.site.urls),
     path('api/users/', include('accounts.urls')),
-    path('api/posts/', include('blog.urls')),
+    path('api/blog/', include('blog.urls')),
     path('api-docs/', TemplateView.as_view(
         template_name='swagger-ui.html',
         extra_context={'schema_url':'openapi-schema'}
     ), name='swagger-ui'),
+    path('redoc/', TemplateView.as_view(
+        template_name='redoc.html',
+        extra_context={'schema_url':'openapi-schema'}
+    ), name='redoc'),
 ]
